Updated about info

--- a/about.html
+++ b/about.html
@@ -140,13 +140,14 @@
               <p>
                 <strong>Ahmed Kaddoura</strong><br />
                 Computer Science Major, <a href="https://www.usfca.edu/">University of San Francisco</a><br />
-                <em>Expected Graduation: Fall 2020</em><br />
+                <em>Expected Graduation: December 2020</em><br />
                 <i class="fas fa-envelope"></i> <a href="mailto:amkaddoura@dons.usfca.edu">amkaddoura@dons.usfca.edu</a>
               </p>
               <p>I am a computer scientist from San Francisco with an interest in front-end development and game design. I am fluent in Python,
               Java, C, and JavaScript and was part of a team that built an online 3D chess game in JavaScript. Outside of computers, I enjoy
               writing songs, playing basketball, and baking.</p>
-              <p> Responsibilities for Alpha Release: </p>
+              <p> Responsibilities for Alpha Release: Edited home page, edited data page, Navagation bar</p>
+              <p> Responsibilities for Visualizations: Volume of calls made per type for each neighborhood heat map </p>
             </div>
           </div>
         </article>
