Added a link to go to visualizations page

--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
         </p>
         <p>Learn more about the dataset on our <a href="dataset.html">data page</a>.
           <br>
-          Learn more about our team on our <a href="about.html">about page.</a></p>
+          Learn more about our team on our <a href="about.html">about page.</a>
+          <br> Learn more about our visualizations on our <a href = "visualizations.html"> visualizations page. </a>
+        </p>
       </div>
       <!-- End page content -->
     </div>
