--- a/visualizations.html
+++ b/visualizations.html
@@ -85,8 +85,14 @@
           Visualizing The Data
         </h1>
         <p>
-          This page will be used for visualizing data. We will be drawing beautiful, informative graphs. Stay tuned!
+          This page will be used for visualizing data.
+          We will be drawing beautiful, informative graphs. Stay tuned!
           </p>
+
+
+        <h2> Tableau Prototype </h2>
+        <h4> Artist: Justine Huynh</h4>
+        <img src = "ALS_Support(J).png">
       </div>
       <!-- End page content -->
     </div>
