Fixed some messages

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
         </h1>
         <p>
           For this project, we will use the <a href="https://data.sfgov.org/Public-Safety/Fire-Department-Calls-for-Service/nuek-vuh3">Fire Department Calls for Service</a> dataset from DataSF. Our focus is neighborhood data to visualize with respect to
-          response time from the fire department. Visuals will investigate a number of groups across neighborhoods including: unit type, station area, call type group, dispatch, response, and on scene time.
-          We are interested in comparing dispatch times between San Francisco neighberhoods and determining whether certain neighborhoods receive faster dispatch.
+          response time and quality of response from the fire department. Visuals will investigate a number of groups across neighborhoods including: unit type, station area, ALS unit, call type group, dispatch, response, and on scene time.
+          We are interested in comparing dispatch times between San Francisco neighberhoods and determining whether certain neighborhoods receive faster dispatch as well as measuring how effective the responses are.
         </p>
         <p>Learn more about the dataset on our <a href="dataset.html">data page</a>.
           <br>
