--- a/visualizations.html
+++ b/visualizations.html
@@ -92,7 +92,11 @@
 
         <h2> Tableau Prototype </h2>
         <h4> Artist: Justine Huynh</h4>
-        <img src = "ALS_Support(J).png">
+        <img src = "ALS_Support(J).png" height = 600>
+        <p> This prototype supports the theme of quality of the SF Fire Department responses.
+        Even if none of the patients require Assisted Life Support (ALS),
+      ambulances that carry ALS units show great safety precaution in the event where future patients
+    <i>do</i> need ALS support resouces. </p>
       </div>
       <!-- End page content -->
     </div>
