--- a/visualizations.html
+++ b/visualizations.html
@@ -94,7 +94,7 @@
         <h4> Artist: Justine Huynh</h4>
         <img src = "ALS_Support(J).png" height = 600>
         <p> This prototype supports the theme of quality of the SF Fire Department responses.
-        Even if none of the patients require Assisted Life Support (ALS),
+        Even if none of the patients require Advance Life Support (ALS),
       ambulances that carry ALS units show great safety precaution in the event where future patients
     <i>do</i> need ALS support resouces. </p>
       </div>
