Wrote planned interactivity

--- a/visualizations.html
+++ b/visualizations.html
@@ -92,11 +92,15 @@
 
         <h2> Tableau Prototype </h2>
         <h4> Artist: Justine Huynh</h4>
-        <img src = "ALS_Support(J).png" height = 600>
+        <img src = "ALS_Support(J).png" height = 960 width = 500>
         <p> This prototype supports the theme of quality of the SF Fire Department responses.
         Even if none of the patients require Advance Life Support (ALS),
       ambulances that carry ALS units show great safety precaution in the event where future patients
-    <i>do</i> need ALS support resouces. </p>
+    <i>do</i> need ALS support resouces.
+    </p>
+    <h4> Planned Interactivity</h4>
+    <p> When the mouse hovers over the bar, users can see a nice table of 3 values:
+    Neighborhood, whether the cases had ALS resources, and the number of cases. </p>
       </div>
       <!-- End page content -->
     </div>
