Names of columns we got

--- a/dataset.html
+++ b/dataset.html
@@ -384,7 +384,8 @@
         We filtered the data from DataSF to grab only the calls that occured in 2019.
         and in San Francisco.
         Then, we used Python to continue wrangling data by extracting only the columns
-        we need.
+        we need: Call Type, Call Date, Received DtTm, Dispatch DtTm, Response DtTm, On Scene DtTm, Station Area,
+        ALS Unit, Call Type Group, Unit Type, Location, Neighborhooods - Analysis Boundaries.
         <br> Python wrangling code can be found here:<a href = "SFFireCallsWrangling.py"> SFFireCallsWrangling.py </a>
         <br> Our new, selected dataset is here: <a href = "FireDepartmentCallsSelected.csv"> FireDepartmentCallsSelected.csv </a>
       </p>
