Noted Justine's plan for visualizations

--- a/about.html
+++ b/about.html
@@ -127,6 +127,7 @@
                 My favorite Pokemon is Latias.
               </p>
               <p> Responsibilities for Alpha Release: Added Visualizations page, fixed grammar errors</p>
+              <p> Responsibilities for Visualizations: Number of response units encoded by whether the response units had ALS or not, encoded by neighborhood
             </div>
           </div>
         </article>
