--- a/visualizations.html
+++ b/visualizations.html
@@ -95,8 +95,8 @@
         <img src = "ALS_Support(J).png" height = 960 width = 500>
         <p> This prototype supports the theme of quality of the SF Fire Department responses.
         Even if none of the patients require Advance Life Support (ALS),
-      ambulances that carry ALS units show great safety precaution in the event where future patients
-    <i>do</i> need ALS support resouces.
+      ambulances that carry ALS resources show great safety precaution in the event where future patients
+    <i>do</i> need ALS. Such a safety precaution greatly increases overall quality of care.
     </p>
     <h4> Planned Interactivity</h4>
     <p> When the mouse hovers over the bar, users can see a nice table of 3 values:
