Added heatmap prototype and seperated prototypes by page

--- a/dataset.html
+++ b/dataset.html
@@ -55,9 +55,17 @@
             <span>Data</span>
           </a>
           <!-- Visualizations Icon -->
-          <a class = "navbar-item" href = "visualizations.html" title = "Visualizations">
+          <a class = "navbar-item" href = "visualization1.html" title = "Visualization 1">
             <span class="icon"><i class="fas fa-paint-brush"></i></span>
-            <span>Visualizations</span>
+            <span>Visualization 1</span>
+          </a>
+          <a class = "navbar-item" href = "visualization2.html" title = "Visualization 2">
+            <span class="icon"><i class="fas fa-paint-brush"></i></span>
+            <span>Visualization 2</span>
+          </a>
+          <a class = "navbar-item" href = "visualization3.html" title = "Visualization 3">
+            <span class="icon"><i class="fas fa-paint-brush"></i></span>
+            <span>Visualization 3</span>
           </a>
         </div>
 
