--- a/visualization3.html
+++ b/visualization3.html
@@ -55,9 +55,17 @@
             <span>Data</span>
           </a>
           <!-- Visualizations Icon -->
-          <a class = "navbar-item" href = "visualizations.html" title = "Visualizations">
+          <a class = "navbar-item" href = "visualization1.html" title = "Visualization 1">
             <span class="icon"><i class="fas fa-paint-brush"></i></span>
-            <span>Visualizations</span>
+            <span>Visualization 1</span>
+          </a>
+          <a class = "navbar-item" href = "visualization2.html" title = "Visualization 2">
+            <span class="icon"><i class="fas fa-paint-brush"></i></span>
+            <span>Visualization 2</span>
+          </a>
+          <a class = "navbar-item is-active" href = "visualization3.html" title = "Visualization 3">
+            <span class="icon"><i class="fas fa-paint-brush"></i></span>
+            <span>Visualization 3</span>
           </a>
         </div>
 
@@ -75,8 +83,6 @@
   </nav>
   <!-- End page navigation -->
 
-
-
   <section class="section">
     <div class="container">
       <!-- Begin page content -->
@@ -84,45 +90,25 @@
         <h1 class="title">
           Visualizing The Data
         </h1>
-        <p>
-          This page will be used for visualizing data.
-          We will be drawing beautiful, informative graphs. Stay tuned!
-          </p>
-
-
-        <h2> Tableau Prototype 1</h2>
-        <h4> Artist: Justine Huynh</h4>
-        <img src = "ALS_Support(J).png" height = 960 width = 500>
-        <p> This prototype supports the theme of quality of the SF Fire Department responses.
-          Even if none of the patients require Advance Life Support (ALS),
-          ambulances that carry ALS resources show great safety precaution in the event where future patients
-          <i>do</i> need ALS. Such a safety precaution greatly increases overall quality of care.
-        </p>
-        <h4> Planned Interactivity</h4>
-        <p> When the mouse hovers over the bar, users can see a nice table of 3 values:
-        Neighborhood, whether the cases had ALS resources, and the number of cases. </p>
-      <br />
-      <h2> Tableau Prototype 2</h2>
-      <h4> Artist: Kai Middlebrook</h4>
-      <img src = "assets/NormalizedDifferenceDispatchOnSceneHeatmap.png" height = 600 width = 900>
-      <p> This prototype aligns with the theme of assessing the response time by neighborhoods of the SF Fire Department.
-        The heatmap displays the average normalized difference between the dispatch time and on scene time. The visualization
-        indicates that units on scene time for calls related to fire in neighborhoods such as Glen Park and Lone Mountain/USF
-        have the largest average normalized difference. In other words, if there is a fire in either of these neighborhoods you
-        can expect fire units to arrive later than the average on scene time. A number of factors may influence the on scene time
-        such as the distance between an available fire station and the call location, accessibility of the location, etc. Both of these
-        neighborhoods are very compact and located on or near hills, which may be the reason for long on scene time wait times.
+        <p>This page currently includes the prototypes for our visualizations.</p>
+      <h2>Tableau Prototype 3</h2>
+      <h4>Artist: Ahmed Kaddoura</h4>
+      <img src = "assets/NumberOfCallsHeatmap.png" height = 500 width = 960>
+      <p> This visualization adds to the overall theme of comparing the response time of the SF Fire Department between San Francisco neighberhoods.
+        The data presented in the visualization is the number of calls from each neighberhood in the dataset. These calls are seperatd by call type
+        to show what services each neighborhood calls the SF Fire Department for most frequently. The fire departments response time for a neighborhood
+        may be corellated with how many calls the fire department recieves from that neighborhood, so this visualization will help answer the question
+        and provide context for why neighborhoods receive different response times.
       </p>
       <h4>Data Wrangling</h4>
-      <p> This data was created on top of our dataset (<a href = "FireDepartmentCallsSelected.csv"> FireDepartmentCallsSelected.csv </a>).
-        This new dataset excludes all rows with missing data (approximately 19%). In addition, 6 new columns were added: 
-        diff_received_to_onScene, diff_dispatch_to_onScene, diff_response_to_onScene, norm_diff_received_to_onScene, norm_diff_dispatch_to_onScene norm_diff_response_to_onScene. The columns containing diff_* calculated the difference between the on scene time and a response time metric
-        (i.e. received, dispatch, response). Then the data was filtered to exclued all rows were the on scene time was before the response time metric (approximately ~0.01%). Finally, the norm_diff_* columns were created. Each of these columns contains the normalized difference between on scene time and the respective response metric. The dataset can be found here: <a href="FireDepartmentCallsSelectedNAFilteredWithDiffs.csv">Filtered and Normalized Fire Data</a>. The code to reproduce this dataset is available as a jupyter notebook: 
-        <a href="https://github.com/usf-cs360-spring2020/midterm-persimmon/blob/gh-pages/data_wrangling_kai.ipynb">Filtered and Normalized Fire Data Notebook</a>.
+      <p> This visualization uses the <a href = "FireDepartmentCallsSelected.csv"> FireDepartmentCallsSelected.csv </a> data which filtered the original
+        dataset down to calls made in San Francisco in 2019. I further created a sum of the number of rows for each neighborhood and call type group. This
+        sum is represented by the color in the heatmap.
       </p>
       <h4> Planned Interactivity</h4>
-      <p> When the mouse hovers over a cross-section of the heatmap, the user will see a nice table of 3 values:
-        neighborhood, call type group, and the average normalized difference between dispatch time and on scene time. 
+      <p> On mouse over of a section of the heatmap, a details on demand table will appear that shows the call type group, neighberhood name,
+        and exact value for the number of calls made for that neighborhood and call type. In addition, when a section of the heatmap is selected,
+        the corresponding section will be highlighted on the response time heatmap.
       </p>
       </div>
       <!-- End page content -->
