--- a/visualization2.html
+++ b/visualization2.html
@@ -22,12 +22,11 @@
     <div class="hero-body">
       <div class="container">
         <h1 class="title">Persimmon</h1>
-        <h2 class="subtitle">Welcome to Team Persimmon's Data Visualization Midterm Project!</h2>
+        <h2 class="subtitle">Welcome to the home of team Persimmon's data visualization midterm project!</h2>
       </div>
     </div>
   </section>
   <!-- End page header -->
-
   <!-- Page navigation -->
   <!-- https://bulma.io/documentation/components/navbar/ -->
   <nav class="navbar is-light" role="navigation" aria-label="main navigation">
@@ -55,11 +54,12 @@
             <span class="icon"><i class="fas fa-table"></i></span>
             <span>Data</span>
           </a>
+          <!-- Visualizations Icon -->
           <a class = "navbar-item" href = "visualization1.html" title = "Visualization 1">
             <span class="icon"><i class="fas fa-paint-brush"></i></span>
             <span>Visualization 1</span>
           </a>
-          <a class = "navbar-item" href = "visualization2.html" title = "Visualization 2">
+          <a class = "navbar-item is-active" href = "visualization2.html" title = "Visualization 2">
             <span class="icon"><i class="fas fa-paint-brush"></i></span>
             <span>Visualization 2</span>
           </a>
@@ -72,6 +72,7 @@
         <!-- Right navbar items -->
         <div class="navbar-end">
           <!-- TODO: Update as needed -->
+          <!-- About Icon -->
           <a class="navbar-item" href="about.html" title="About">
             <span class="icon"><i class="fas fa-info-circle"></i></span>
             <span>About</span>
@@ -82,28 +83,42 @@
   </nav>
   <!-- End page navigation -->
 
+
+
   <section class="section">
     <div class="container">
       <!-- Begin page content -->
       <div class="content">
         <h1 class="title">
-          Visualizing San Francisco Fire Department Calls for Service
+          Visualizing The Data
         </h1>
-        <p>
-          For this project, we will use the <a href="https://data.sfgov.org/Public-Safety/Fire-Department-Calls-for-Service/nuek-vuh3">Fire Department Calls for Service</a> dataset from DataSF. Our focus is neighborhood data to visualize with respect to
-          response time and quality of response from the fire department. Visuals will investigate a number of groups across neighborhoods including: unit type, station area, ALS unit, call type group, dispatch, response, and on scene time.
-          We are interested in comparing dispatch times between San Francisco neighberhoods and determining whether certain neighborhoods receive faster dispatch as well as measuring how effective the responses are.
-        </p>
-        <p>Learn more about the dataset on our <a href="dataset.html">data page</a>.
-          <br>
-          Learn more about our team on our <a href="about.html">about page.</a>
-          <br> Learn more about our visualizations on our <a href = "visualizations.html"> visualizations page. </a>
-        </p>
+        <p>This page currently includes the prototypes for our visualizations.</p>
+      <h2>Tableau Prototype 2</h2>
+      <h4>Artist: Kai Middlebrook</h4>
+      <img src = "assets/NormalizedDifferenceDispatchOnSceneHeatmap.png" height = 600 width = 900>
+      <p> This prototype aligns with the theme of assessing the response time by neighborhoods of the SF Fire Department.
+        The heatmap displays the average normalized difference between the dispatch time and on scene time. The visualization
+        indicates that units on scene time for calls related to fire in neighborhoods such as Glen Park and Lone Mountain/USF
+        have the largest average normalized difference. In other words, if there is a fire in either of these neighborhoods you
+        can expect fire units to arrive later than the average on scene time. A number of factors may influence the on scene time
+        such as the distance between an available fire station and the call location, accessibility of the location, etc. Both of these
+        neighborhoods are very compact and located on or near hills, which may be the reason for long on scene time wait times.
+      </p>
+      <h4>Data Wrangling</h4>
+      <p>This data was created on top of our dataset (<a href = "FireDepartmentCallsSelected.csv"> FireDepartmentCallsSelected.csv </a>).
+        This new dataset excludes all rows with missing data (approximately 19%). In addition, 6 new columns were added:
+        diff_received_to_onScene, diff_dispatch_to_onScene, diff_response_to_onScene, norm_diff_received_to_onScene, norm_diff_dispatch_to_onScene norm_diff_response_to_onScene. The columns containing diff_* calculated the difference between the on scene time and a response time metric
+        (i.e. received, dispatch, response). Then the data was filtered to exclued all rows were the on scene time was before the response time metric (approximately ~0.01%). Finally, the norm_diff_* columns were created. Each of these columns contains the normalized difference between on scene time and the respective response metric. The dataset can be found here: <a href="FireDepartmentCallsSelectedNAFilteredWithDiffs.csv">Filtered and Normalized Fire Data</a>. The code to reproduce this dataset is available as a jupyter notebook:
+        <a href="https://github.com/usf-cs360-spring2020/midterm-persimmon/blob/gh-pages/data_wrangling_kai.ipynb">Filtered and Normalized Fire Data Notebook</a>.
+      </p>
+      <h4>Planned Interactivity</h4>
+      <p> When the mouse hovers over a cross-section of the heatmap, the user will see a nice table of 3 values:
+        neighborhood, call type group, and the average normalized difference between dispatch time and on scene time.
+      </p>
       </div>
       <!-- End page content -->
     </div>
   </section>
-
   <!-- Page footer -->
   <!-- https://bulma.io/documentation/layout/footer/ -->
   <footer class="footer">
@@ -154,5 +169,4 @@
   </script>
   <!-- End mobile menu responsiveness -->
   </body>
-
 </html>
