Fixed titles and text

--- a/visualization1.html
+++ b/visualization1.html
@@ -83,18 +83,14 @@
   </nav>
   <!-- End page navigation -->
 
-
-
   <section class="section">
     <div class="container">
       <!-- Begin page content -->
       <div class="content">
         <h1 class="title">
-          Visualizing The Data
+          Prototype 1
         </h1>
-        <p>This page currently includes the prototypes for our visualizations.</p>
 
-        <h2>Tableau Prototype 1</h2>
         <h4>Artist: Justine Huynh</h4>
         <img src = "ALS_Support(J).png" height = 960 width = 500>
         <p> This prototype supports the theme of quality of the SF Fire Department responses.
