--- a/visualization2.html
+++ b/visualization2.html
@@ -90,10 +90,9 @@
       <!-- Begin page content -->
       <div class="content">
         <h1 class="title">
-          Visualizing The Data
+          Prototype 2
         </h1>
-        <p>This page currently includes the prototypes for our visualizations.</p>
-      <h2>Tableau Prototype 2</h2>
+        
       <h4>Artist: Kai Middlebrook</h4>
       <img src = "assets/NormalizedDifferenceDispatchOnSceneHeatmap.png" height = 600 width = 900>
       <p> This prototype aligns with the theme of assessing the response time by neighborhoods of the SF Fire Department.
