--- a/visualization3.html
+++ b/visualization3.html
@@ -88,10 +88,9 @@
       <!-- Begin page content -->
       <div class="content">
         <h1 class="title">
-          Visualizing The Data
+          Prototype 3
         </h1>
-        <p>This page currently includes the prototypes for our visualizations.</p>
-      <h2>Tableau Prototype 3</h2>
+        
       <h4>Artist: Ahmed Kaddoura</h4>
       <img src = "assets/NumberOfCallsHeatmap.png" height = 500 width = 960>
       <p> This visualization adds to the overall theme of comparing the response time of the SF Fire Department between San Francisco neighberhoods.
