Updated navigation bar

--- a/about.html
+++ b/about.html
@@ -34,8 +34,7 @@
   <nav class="navbar is-light" role="navigation" aria-label="main navigation">
     <div class="container">
       <div class="navbar-brand">
-        <!-- TODO: Change which navbar-item is-active if needed -->
-        <a class="navbar-item is-active" href="index.html">
+        <a class="navbar-item" href="index.html">
           <span class="icon"><i class="fas fa-home"></i></span>
           <span>Home</span>
         </a>
@@ -55,16 +54,23 @@
             <span>Data</span>
           </a>
           <!-- Visualizations Icon -->
-          <a class = "navbar-item" href = "visualizations.html" title = "Visualizations">
+          <a class = "navbar-item" href = "visualization1.html" title = "Visualization 1">
             <span class="icon"><i class="fas fa-paint-brush"></i></span>
-            <span>Visualizations</span>
+            <span>Visualization 1</span>
+          </a>
+          <a class = "navbar-item" href = "visualization2.html" title = "Visualization 2">
+            <span class="icon"><i class="fas fa-paint-brush"></i></span>
+            <span>Visualization 2</span>
+          </a>
+          <a class = "navbar-item" href = "visualization3.html" title = "Visualization 3">
+            <span class="icon"><i class="fas fa-paint-brush"></i></span>
+            <span>Visualization 3</span>
           </a>
         </div>
 
         <!-- Right navbar items -->
         <div class="navbar-end">
-          <!-- TODO: Update as needed -->
-          <a class="navbar-item" href="about.html" title="About">
+          <a class="navbar-item is-active" href="about.html" title="About">
             <span class="icon"><i class="fas fa-info-circle"></i></span>
             <span>About</span>
           </a>
