--- a/visualization2.html
+++ b/visualization2.html
@@ -34,7 +34,7 @@
       <div class="navbar-brand">
         <!-- TODO: Change link to repository homepage if needed -->
         <!-- TODO: Change which navbar-item is-active if needed -->
-        <a class="navbar-item is-active" href="index.html">
+        <a class="navbar-item" href="index.html">
           <span class="icon"><i class="fas fa-home"></i></span>
           <span>Home</span>
         </a>
@@ -92,7 +92,7 @@
         <h1 class="title">
           Prototype 2
         </h1>
-        
+
       <h4>Artist: Kai Middlebrook</h4>
       <img src = "assets/NormalizedDifferenceDispatchOnSceneHeatmap.png" height = 600 width = 900>
       <p> This prototype aligns with the theme of assessing the response time by neighborhoods of the SF Fire Department.
