--- a/visualization3.html
+++ b/visualization3.html
@@ -34,7 +34,7 @@
       <div class="navbar-brand">
         <!-- TODO: Change link to repository homepage if needed -->
         <!-- TODO: Change which navbar-item is-active if needed -->
-        <a class="navbar-item is-active" href="index.html">
+        <a class="navbar-item" href="index.html">
           <span class="icon"><i class="fas fa-home"></i></span>
           <span>Home</span>
         </a>
@@ -90,7 +90,7 @@
         <h1 class="title">
           Prototype 3
         </h1>
-        
+
       <h4>Artist: Ahmed Kaddoura</h4>
       <img src = "assets/NumberOfCallsHeatmap.png" height = 500 width = 960>
       <p> This visualization adds to the overall theme of comparing the response time of the SF Fire Department between San Francisco neighberhoods.
