--- a/visualization1.html
+++ b/visualization1.html
@@ -12,6 +12,8 @@
 
     <!-- Load Font Awesome 5 (free) icons -->
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+    <!-- Load D3 Script -->
+    <script src="https://d3js.org/d3.v5.min.js"></script>
   </head>
 
   <body>
@@ -120,9 +122,14 @@
         <p> When the mouse hovers over the bar, users can see a nice table of 3 values:
         Neighborhood, whether the cases had ALS resources, and the number of cases. </p>
       <br />
-      </div>
+
 
       <h4>D3</h4>
+
+
+      <script src = "stackedBarALS.js"></script>
+      <svg id = "stackedBar"> </svg>
+      </div>
       <!-- End page content -->
     </div>
   </section>
