--- a/number_of_calls.html
+++ b/number_of_calls.html
@@ -11,6 +11,7 @@
     <!-- Load Bulma from CDN (consider saving it to repository instead) -->
     <!-- https://bulma.io/ -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
+    <link rel="stylesheet" href="number_of_calls.css">
 
     <!-- Load Font Awesome 5 (free) icons -->
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
@@ -107,6 +108,9 @@
       <p> On mouse over of a section of the heatmap, a details on demand table will appear that shows the call type group, neighberhood name,
         and exact value for the number of calls made for that neighborhood and call type. In addition, when a section of the heatmap is selected,
         the corresponding section will be highlighted on the response time heatmap.
+      </p>
+      <h4> Prototype improvements</h4>
+      <p> Removed null column. Data wrangled number of rows to number of calls. Right alligned neighborhood label.
       </p>
       </div>
       <!-- End page content -->
