added proper visualization layout and initial heatmap viz

--- a/visualization2.html
+++ b/visualization2.html
@@ -12,6 +12,19 @@
 
     <!-- Load Font Awesome 5 (free) icons -->
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+
+    <!-- include d3.js v5 -->
+    <script src="https://d3js.org/d3.v5.min.js"></script>
+
+    <!-- include d3.js modules -->
+    <script src="https://d3js.org/d3-time.v1.min.js"></script>
+    <script src="https://d3js.org/d3-time-format.v2.min.js"></script>
+    <script src="https://d3js.org/d3-array.v2.min.js"></script>
+    <script src="https://d3js.org/d3-fetch.v1.min.js"></script>
+    <script src="d3-tip.js"></script>
+    <!-- custom css -->
+    <link rel="stylesheet" href="kai_style.css">
+
   </head>
 
   <body>
