--- a/final_visualization2.html
+++ b/final_visualization2.html
@@ -40,7 +40,7 @@
     </div>
   </section>
   <!-- End page header -->
-  
+
   <!-- Page navigation -->
   <!-- https://bulma.io/documentation/components/navbar/ -->
   <nav class="navbar is-light" role="navigation" aria-label="main navigation">
@@ -130,44 +130,42 @@
       <!-- Begin page content -->
       <div class="content">
         <h1 class="title">
-          Prototype 2
+          Visualization 2
         </h1>
 
-      <h4>Artist: Kai Middlebrook</h4>
-      <p> This prototype aligns with the theme of assessing the response time by neighborhoods of the SF Fire Department.
-        The heatmap displays the average normalized difference between the dispatch time and on scene time. The visualization
-        indicates that units on scene time for calls related to fire in neighborhoods such as Glen Park and Lone Mountain/USF
-        have the largest average normalized difference. In other words, if there is a fire in either of these neighborhoods you
-        can expect fire units to arrive later than the average on scene time. A number of factors may influence the on scene time
-        such as the distance between an available fire station and the call location, accessibility of the location, etc. Both of these
-        neighborhoods are very compact and located on or near hills, which may be the reason for long on scene time wait times.
-      </p>
-      <h4>Data Wrangling</h4>
-      <p>This data was created on top of our dataset (<a href = "FireDepartmentCallsSelected.csv"> FireDepartmentCallsSelected.csv </a>).
-        This new dataset excludes all rows with missing data (approximately 19%). In addition, 6 new columns were added:
-        diff_received_to_onScene, diff_dispatch_to_onScene, diff_response_to_onScene, norm_diff_received_to_onScene, norm_diff_dispatch_to_onScene norm_diff_response_to_onScene. The columns containing diff_* calculated the difference between the on scene time and a response time metric
-        (i.e. received, dispatch, response). Then the data was filtered to exclued all rows were the on scene time was before the response time metric (approximately ~0.01%). Finally, the norm_diff_* columns were created. Each of these columns contains the normalized difference between on scene time and the respective response metric. The dataset can be found here: <a href="FireDepartmentCallsSelectedNAFilteredWithDiffs.csv">Filtered and Normalized Fire Data</a>. The code to reproduce this dataset is available as a jupyter notebook:
-        <a href="https://github.com/usf-cs360-spring2020/midterm-persimmon/blob/gh-pages/data_wrangling_kai.ipynb">Filtered and Normalized Fire Data Notebook</a>.
-      </p>
-      <h4>Planned Interactivity</h4>
-      <p> When the mouse hovers over a cross-section of the heatmap, the user will see a nice table of 3 values:
-        neighborhood, call type group, and the average normalized difference between dispatch time and on scene time.
-      </p>
+        <h4>Artist: Kai Middlebrook</h4>
+        <p> This prototype aligns with the theme of assessing the response time by neighborhoods of the SF Fire Department.
+          The heatmap displays the average normalized difference between the dispatch time and on scene time. The visualization
+          indicates that units on scene time for calls related to fire in neighborhoods such as Glen Park and Lone Mountain/USF
+          have the largest average normalized difference. In other words, if there is a fire in either of these neighborhoods you
+          can expect fire units to arrive later than the average on scene time. A number of factors may influence the on scene time
+          such as the distance between an available fire station and the call location, accessibility of the location, etc. Both of these
+          neighborhoods are very compact and located on or near hills, which may be the reason for long on scene time wait times.
+        </p>
+        <h4>Data Wrangling</h4>
+        <p>This data was created on top of our dataset (<a href = "FireDepartmentCallsSelected.csv"> FireDepartmentCallsSelected.csv </a>).
+          This new dataset excludes all rows with missing data (approximately 19%). In addition, 6 new columns were added:
+          diff_received_to_onScene, diff_dispatch_to_onScene, diff_response_to_onScene, norm_diff_received_to_onScene, norm_diff_dispatch_to_onScene norm_diff_response_to_onScene. The columns containing diff_* calculated the difference between the on scene time and a response time metric
+          (i.e. received, dispatch, response). Then the data was filtered to exclued all rows were the on scene time was before the response time metric (approximately ~0.01%). Finally, the norm_diff_* columns were created. Each of these columns contains the normalized difference between on scene time and the respective response metric. The dataset can be found here: <a href="FireDepartmentCallsSelectedNAFilteredWithDiffs.csv">Filtered and Normalized Fire Data</a>. The code to reproduce this dataset is available as a jupyter notebook:
+          <a href="https://github.com/usf-cs360-spring2020/midterm-persimmon/blob/gh-pages/data_wrangling_kai.ipynb">Filtered and Normalized Fire Data Notebook</a>.
+        </p>
+        <h4>Planned Interactivity</h4>
+        <p> When the mouse hovers over a cross-section of the heatmap, the user will see a nice table of 3 values:
+          neighborhood, call type group, and the average normalized difference between dispatch time and on scene time.
+        </p>
 
-      <!-- D3 version -->
-      <svg id="heatmap"></svg>
-      <div id="nav-container">
-        <div class="nav left">previous</div>
-          <div id="locationDropdown"></div>
-        <div class="nav right">next</div>
-        <div class="buttons"></div>
-        <br />  
-      </div>
-      <div class="content" id='barcharts'></div>
-      <!-- <svg id="bar"></svg> -->
+        <!-- D3 version -->
+        <div id="heatmap"></div>
+        <div id="nav-container">
+          <div class="nav left">previous</div>
+            <div id="locationDropdown"></div>
+          <div class="nav right">next</div>
+          <div class="buttons"></div>
+          <br />  
+        </div>
+        <div id='barcharts'></div>
 
-
-      <script src="heatmap_kai.js"></script>
+        <script src="heatmap_kai.js"></script>
       </div>
       <!-- End page content -->
     </div>
